tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__utils__test__emit_utils_codegen@pre-mem2reg@llvm14_1.snap
---
source: tket-qsystem/src/llvm/utils.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1() {
alloca_block:
  %"0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %shot = call i64 @get_current_shot()
  store i64 %shot, i64* %"4_0", align 4
  %"4_01" = load i64, i64* %"4_0", align 4
  store i64 %"4_01", i64* %"0", align 4
  %"02" = load i64, i64* %"0", align 4
  ret i64 %"02"
}

declare i64 @get_current_shot()
